--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 <div class="content" style="margin-left: 80px;" style="margin-right: 80px;">
 <section id="home">
 <div style="display: flex; align-items: center;">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\jianhua.png" alt="GitHub Logo" width="150" style="margin-right: 60px;">
+<img src="jianhua.png" alt="GitHub Logo" width="150" style="margin-right: 60px;">
 <div>
 <h1 id="jianhua-sun">Jianhua Sun</h1>
 <p><strong>Office:</strong> School of Artificial Intelligence, Room 209<br>
@@ -255,7 +255,7 @@
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\ArtiPG.png" alt="ArtiPG" style="width: 100%; width: 200px; height: 100px;">
+<img src="paper\ArtiPG.png" alt="ArtiPG" style="width: 100%; width: 200px; height: 100px;">
 </td>
 <td width="80%">
 <p><strong><a href="https://arxiv.org/pdf/2412.14974">Arti-PG: A Toolbox for Procedurally Synthesizing Large-Scale and Diverse Articulated Objects with Rich Annotations</a></strong><br>
@@ -267,7 +267,7 @@ IEEE/CVF International Conference on Computer Vision (ICCV), 2025<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\IAN.png" alt="IAN" style="width: 100%; width: 200px; height: 100px;">
+<img src="paper\IAN.png" alt="IAN" style="width: 100%; width: 200px; height: 100px;">
 </td>
 <td width="80%">
 <p><strong><a href="https://openreview.net/pdf?id=DCpukR83sw">Interactive Adjustment for Human Trajectory Prediction with Individual Feedback</a></strong><br>
@@ -279,7 +279,7 @@ International Conference on Learning Representations (ICLR), 2025<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\AOTNet.png" alt="AOTNet" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\AOTNet.png" alt="AOTNet" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://ojs.aaai.org/index.php/AAAI/article/view/33609/35764">Discovering Conceptual Knowledge with Analytic Ontology Templates for Articulated Objects</a></strong><br>
@@ -291,7 +291,7 @@ AAAI Conference on Artificial Intelligence (AAAI), 2025<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\ConceptFactory.png" alt="ConceptFactory" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\ConceptFactory.png" alt="ConceptFactory" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/89d19544d314740d11c0974ca3ddaf70-Paper-Datasets_and_Benchmarks_Track.pdf">ConceptFactory: Facilitate 3D Object Knowledge Annotation with Object Conceptualization</a></strong><br>
@@ -303,7 +303,7 @@ Conference on Neural Information Processing Systems (NeurIPS), 2024<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\PCCSNet++.png" alt="PCCSNet++" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\PCCSNet++.png" alt="PCCSNet++" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://ieeexplore.ieee.org/document/10254381">Modality Exploration, Retrieval and Adaptation for Trajectory Prediction</a></strong><br>
@@ -318,7 +318,7 @@ IEEE/CVF International Conference on Computer Vision (ICCV), 2021<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\Instaboost++.png" alt="Instaboost++" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\Instaboost++.png" alt="Instaboost++" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://link.springer.com/article/10.1007/s11263-023-01807-9">InstaBoost++: Visual Coherence Principles for Unified 2D/3D Instance Level Data Augmentation</a></strong><br>
@@ -333,7 +333,7 @@ Hao-Shu Fang*, <strong>Jianhua Sun</strong>*, Runzhong Wang*, Minghao Gou, Yongl
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\Stimulus.png" alt="Stimulus" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\Stimulus.png" alt="Stimulus" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Sun_Stimulus_Verification_Is_a_Universal_and_Effective_Sampler_in_Multi-Modal_CVPR_2023_paper.pdf">Stimulus Verification is a Universal and Effective Sampler in Multi-Modal Human Trajectory Prediction</a></strong><br>
@@ -345,7 +345,7 @@ IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2023<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\AOE.png" alt="AOE" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\AOE.png" alt="AOE" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Sun_Human_Trajectory_Prediction_With_Momentary_Observation_CVPR_2022_paper.pdf">Human Trajectory Prediction with Momentary Observation</a></strong><br>
@@ -357,7 +357,7 @@ IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2022<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\InstaBoost3D.png" alt="InstaBoost3D" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\InstaBoost3D.png" alt="InstaBoost3D" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://ojs.aaai.org/index.php/AAAI/article/download/20128/19887">Correlation Field for Boosting 3D Object Detection in Structured Scenes</a></strong><br>
@@ -369,7 +369,7 @@ AAAI Conference on Artificial Intelligence (AAAI), 2022<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\P-Flow.png" alt="P-Flow" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\P-Flow.png" alt="P-Flow" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://drive.google.com/file/d/1vKIg-m-Ikan0ZNyjFMTNfH7uQP8iuUKZ/view">Unified and Fast Human Trajectory Prediction Via Conditionally Parameterized Normalizing Flow</a></strong><br>
@@ -381,7 +381,7 @@ IEEE Robotics and Automation Letters (RA-L)<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\RSBG.png" alt="RSBG" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\RSBG.png" alt="RSBG" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Sun_Recursive_Social_Behavior_Graph_for_Trajectory_Prediction_CVPR_2020_paper.pdf">Recursive Social Behavior Graph for Trajectory Prediction</a></strong><br>
@@ -393,7 +393,7 @@ IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2020<br>
 <table>
 <tr>
 <td width="20%">
-<img src="file:///c:\Users\Jianhua\OneDrive\paper\myown\行政文件\个人主页材料\paper\openpasta.jpg" alt="openpasta" style="width: 100%; max-width: 200px; height: auto;">
+<img src="paper\openpasta.jpg" alt="openpasta" style="width: 100%; max-width: 200px; height: auto;">
 </td>
 <td width="80%">
 <p><strong><a href="https://proceedings.neurips.cc/paper_files/paper/2023/file/5edb57c05c81d04beb716ef1d542fe9e-Paper-Conference.pdf">Symbol-LLM: Leverage Language Models for Symbolic System in Visual Human Activity Reasoning</a></strong><br>
