--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 <li><strong>autonomous driving</strong></li>
 <li><strong>AI-assisted design and content generation</strong></li>
 </ul>
-<p><font color=red><strong>Recruitment:</strong> Looking for self-motivated students (Master &amp; Ph.D. spring &amp; fall, undergraduate interns, visitors) to join us in <a href="https://www.mvig.org/">MVIG</a>. Feel free to email me directly with your CV (Subject: Recruitment + Institution + Field of Study + Academic Year + Name).</font></p>
+<p><font color=red><strong>Recruitment:</strong> Looking for self-motivated students (Master &amp; Ph.D. spring &amp; fall 2026 &amp; later, undergraduate interns, visitors) to join us in <a href="https://www.mvig.org/">MVIG</a>. Feel free to email me directly with your CV (Subject: Recruitment + Institution + Field of Study + Academic Year + Name).</font></p>
 <h1 id="-2"></h1>
 <h2 id="publications">Publications</h2>
 <p>(* and † indicate equal contribution and corresponding author)</p>
